Revision history for Perl extension RPi::WiringPi.

2.3634  UNREL
        - bump prereq of RPi::I2C to 2.3608

2.3633_03 2019-11-18
        - added rpi_sudo_check() in RPiTest. All test files that sudo needs to
          call this function before any work is done (fixes #144)
        - added RPI_POD, RPI_SUDO and RPI_OBJECT_COUNT testing environment
          variables
        - test suite PI_BOARD check is now done in the RPiTest library, and is
          now not required in individual test files. Test files need only
          specify the env vars they require specifically (eg RPI_ADC).
          (closes #148)
        - reworked the entire cleanup() regimen and how we manage meta data. It
          only ever operates on its own object, and never crosses object
          boundaries
        - added ability to set a custom shared memory key on a per-object basis.
          This allows objects within separate processes to be 'grouped' together
          under the same shared memory segment (eg: prod and test envs can run
          separately) (closes #153)
        - removed left-over includes of IPC::Shareable. We don't use that
          distribution any longer, so it's not included as a prereq
        - added note to PWM FAQ section that root access is needed (link to sudo
          config section) (closes #158)
        - added meta_key_check() class method in Meta, to check whether a shared
          memory segment exists or not
        - pimeta and pimetaerase scripts now croak if the shared memory segment
          we're trying to work on don't yet exist (fixes #156)
        - added meta_get(), meta_set() and meta_delete(). Allows manipulation of
          user-defined data within shared memory (closes #146)
        - bump prereq of RPi::Pin from 2.3607 to 2.3608, and
          RPi::GPIOExpander::MCP23017 from 1.00 to 1.01. These changes reflect
          testing environment variable changes (work on #159)